Return of the coin shop. Plus some cleanup of comments in the config.lua file with regards to the template scenario. Also bumping version number and starting changelog.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.3
+Date: 2024-10-13
+  Major Features:
+    - Return of the "coin shop" feature.
+    - Marking RSO as incompatible because I can't easily make it compatible.
+  Info:
+    - Updated comments in config file and scenario template to be more clear.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2024-10-08
   Major Features:
