Removing migrations and bump to new major version.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: ????
+  Major Features:
+    - Support for Factorio 2.0 and Space Age DLC!
+---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: 2024-10-19
   Bugfixes:
