Fixing crash in player list. Also bumping version.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.1
+Date: 2024-10-23
+  Bugfixes:
+    - Fix a crash when clicking on player location in player list.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 2024-10-22
   Major Features:
