--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.2
+Date: 2024-10-23
+  Bugfixes:
+    - Fix spawn controls tab in custom GUI not being re-enabled when GUI is recreated (on mod update for example).
+---------------------------------------------------------------------------------------------------
 Version: 2.1.1
 Date: 2024-10-23
   Bugfixes:
