Add GPS ping text for player when clicking on player list location. Bumping version too.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.3
+Date: ????
+  Minor Features:
+    - Add GPS ping for when player clicks on someone's location in the player list.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.2
 Date: 2024-10-23
   Bugfixes:
