--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,9 @@ Version: 2.1.3
 Date: ????
   Minor Features:
     - Add GPS ping for when player clicks on someone's location in the player list.
+  Changes:
+    - Change default spacing between fluid resource patches (like crude-oil) to be 6 instead of 4.
+    - Added config setting to control the spacing between fluid resource patches. (Not exposed in the GUI.)
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.2
 Date: 2024-10-23
