Exposing friendly and cease fire in mod settings. I guess PvP is now technically supported?

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: ????
   Minor Features:
     - Add GPS ping for when player clicks on someone's location in the player list.
     - Players can now reset themselves if they want a different spawn. Available in the spawn controls tab of the custom GUI. This feature is enabled by default but can be disabled with a setting.
+    - New settings allow changing if player teams are friendly and/or have a cease fire. Exposed because friendly forces are problematic due to griefing. CooP is still the default setting.
   Changes:
     - Change default spacing between fluid resource patches (like crude-oil) to be 6 instead of 4.
     - Added config setting to control the spacing between fluid resource patches. (Not exposed in the GUI.)
