--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.4
+Date: 2024-10-29
+  Bugfixes:
+    - Fix crash due to invalid player character when attempting to remove items in player left game event.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.3
 Date: 2024-10-27
   Minor Features:
