Fix teleport bug when remote driving.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.6
+Date: 2024-11-04
+  Bugfixes:
+    - Fix player being teleported home when remote driving vehicles.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.5
 Date: 2024-11-01
   Changes:
