Fix #240 crash on gui radio select when main team is disabled.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.7
+Date: 2024-11-05
+  Bugfixes:
+    - Fix crash when player clicks on team radio select if main team is disabled.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.6
 Date: 2024-11-04
   Bugfixes:
