--- a/changelog.txt
+++ b/changelog.txt
@@ -8,7 +8,7 @@ Date: ????
     - Change surface regrowth checkboxes to be enabled/disabled by the global setting to make it obvious that they are dependent on the global setting.
   Bugfixes:
     - Fix regrowth surface setting not respecting previous setting state when surface is first created.
-    - Fix offline enemy attack error when attacks target a player character.
+    - Remove offline enemy attack error messages. (Not really a bug, just false error messages.)
   Info:
     - Add RU translation (thanks KORESHon!)
 ---------------------------------------------------------------------------------------------------
