Switch to using new set_driving() function, update required base version and mod version.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.14
+Date: 2024-11-21
+  Info:
+    - Update locale (thanks plexpt!)
+    - Make use of new set_driving() function.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.13
 Date: 2024-11-20
   Major Features:
