Start dev branch for 2.1.15

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.15
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 2.1.14
 Date: 2024-11-21
   Info:
