--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.15
-Date: ????
+Date: 2024-11-27
   Bugfixes:
     - Fix crash when player spawns due to missing surface configuration due to a missing migration.
   Changes:
