--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 Version: 2.1.16
 Date: ????
   Changes:
-    - Add player color when sharing cross-force chat messages. Also changed the sound.
+    - Lots of minor changes to the various messages that get printed. Added color and icons where appropriate, and changed some of the sound effects used.
   Modding:
     - Add oarc-mod-on-config-changed and oarc-mod-on-chunk-generated-near-spawn events.
     - Update template scenario to show how to use the new events to modify the spawn area and spawn options GUI.
