--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.16
-Date: ????
+Date: 2024-12-03
+  Minor Features:
+    - Added command to remove an offline player's spawns and character (oarc-cleanup-player).
   Changes:
     - Lots of minor changes to the various messages that get printed. Added color and icons where appropriate, and changed some of the sound effects used.
   Modding:
