Fix infinite tech notifications.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.17
+Date: ????
+  Bugfixes:
+    - Fix incorrect names printed for infinite technology research.
+---------------------------------------------------------------------------------------------------
 Version: 2.1.16
 Date: 2024-12-03
   Bugfixes:
