Update changelog and add a note about gleba resources only supporting autoplace.

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Version: 2.1.17
 Date: ????
   Bugfixes:
     - Fix incorrect names printed for infinite technology research.
+  Minor Features:
+    - Add a setting to clear decoratives in the spawn area. (Not enabled by default, not visible in the native mod settings.)
   Info:
     - Add more info to the template scenario to help with understanding how to override settings.
     - Disable some of the extra debug logging.
