--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.18
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 2.1.17
 Date: 2024-12-09
   Major Features:
