--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.18
-Date: ????
-  Changes:
+Date: 2024-12-11
+  Bugfixes:
+    - Fix crash when using square bases with gleba-style resources being placed.
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.17
 Date: 2024-12-09
