--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.19
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 2.1.18
 Date: 2024-12-11
   Bugfixes:
