--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.20
-Date: ????
+Date: 2024-12-30
   Changes:
     - Change settings import/export to use serpent block instead of a single line. This should make it easier to read and edit the settings.
     - Add a customizable section to the server info tab (not editable via GUI for now, only via remote interface, custom scenario or importing custom settings).
