This should actually fix the issue with an outdated buddy in spawn choices.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.21
-Date: ????
+Date: 2024-12-31
   Bugfixes:
     - Actually fix crash when buddy is now an ex, when generating a secondary spawn.
 ---------------------------------------------------------------------------------------------------
