--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.24
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 2.1.23
 Date: 2025-01-19
   Bugfixes:
